# Athletica

./: .gitignore  .pre-commit-config.yaml  README.md  SECURITY.md  docker-compose.yml  secrets.prod.enc.yaml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: calendar.py  dashboard.py  exercises.py  goals.py  ml.py  recommendations.py  telegram.py  templates.py  whoop.py  workouts.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/integrations/: whoop_client.py
backend/app/ml/: pipeline.py
backend/app/models/: __init__.py  calendar.py  exercise.py  goal.py  recommendation.py  training.py  user.py  whoop.py  whoop_oauth.py  workout.py  workout_template.py
backend/app/schemas/: calendar.py  dashboard.py  exercise.py  recommendation.py  template.py  whoop.py  workout.py
backend/app/services/: telegram.py  whoop_oauth.py
backend/app/workers/: celery_app.py  tasks.py
frontend/: Dockerfile  index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
infra/cron/: athletica.cron
infra/nginx/: nginx.conf
scripts/: check_secrets.sh
