[project]
name = "athletica-backend"
version = "0.1.0"
description = "Athletica backend service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlalchemy>=2.0",
  "psycopg2-binary>=2.9",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "alembic>=1.13",
  "celery>=5.3",
  "redis>=5.0",
  "httpx>=0.27",
  "pandas>=2.2",
  "scikit-learn>=1.4",
  "lightgbm>=4.3",
  "mlflow>=2.11",
  "python-dotenv>=1.0"
]
